--- a/src/components/card.css
+++ b/src/components/card.css
@@ -20,8 +20,8 @@
   width: 100%;
   border-top: 3px solid black;
   background-color: #010624;
-  border-bottom-left-radius: inherit;
-  border-bottom-right-radius: inherit;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .card-name {
