--- a/src/components/card.css
+++ b/src/components/card.css
@@ -4,6 +4,12 @@
   border-radius: 25px;
   border: 3px solid black;
   margin: 10px;
+  cursor: pointer;
+  
+}
+
+.card:hover {
+  opacity: 0.9;
 }
 
 .card-image {
