finished search function, basic site. version 0.1

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -5,8 +5,9 @@
   border: 3px solid black;
   margin: 10px;
   cursor: pointer;
-  
 }
+
+/* cards container is in app.css */
 
 .card:hover {
   opacity: 0.9;
