--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,22 @@
   flex-direction: column;
 }
 
+/* search container and input field */
+
+.search {
+  padding: 10px;
+}
+
+.search input {
+  width: calc(100% - 15px);
+  height: 40px;
+  font-size: 24px;
+  text-align: center;
+  border-radius: 15px
+}
+
+/* end */
+
 .cards-container {
   display: flex;
   flex-wrap: wrap;
