--- a/src/components/card.css
+++ b/src/components/card.css
@@ -11,6 +11,7 @@
 
 .card:hover {
   opacity: 0.9;
+  /* animation: Card-spin 0.2s linear; */
 }
 
 .card-image {
@@ -34,3 +35,13 @@
 .card-name {
   margin: 0 auto;
 }
+
+
+/* @keyframes Card-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
