--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
   display: flex;
   background-color: #345976;
+  flex-direction: column;
 }
 
 .main {
@@ -12,7 +13,7 @@
 /* search container and input field */
 
 .search {
-  padding: 10px;
+  padding: 10px 3px 5px 3px;
 }
 
 .search input {
@@ -26,15 +27,18 @@
 /* end */
 
 .cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
+  z-index: 100;
+  height: 45vh;
+  overflow: auto;
+  white-space: nowrap;
+  border: 5px solid black;
 }
 
 .map {
   flex-grow: 1;
-  height: 100vh;
+  height: 55vh;
   top: 0;
   position: sticky;
+  overflow: scroll;
 }
 
