--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,10 +1,11 @@
 .card {
   /* height: 350px; */
-  flex-basis: calc(50% - 30px);
+  /* flex-basis: calc(50% - 30px); */
   border-radius: 25px;
   border: 3px solid black;
   margin: 10px;
   cursor: pointer;
+  display: inline-block;
 }
 
 /* cards container is in app.css */
@@ -18,13 +19,13 @@
   border-top-right-radius: 21px;
   border-top-left-radius: 21px;
   background-size: cover;
-  height: 320px;
-  width: 100%;
+  width: 150px;
+  height: 250px;
 }
 
 .card-name-container {
   text-align: center;
-  height: 30px;
+  height: 10%;
   width: 100%;
   border-top: 3px solid black;
   background-color: #010624;
