--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,17 @@
 
 .search {
   padding: 10px 3px 5px 3px;
+  height: 5vh;
+  text-align: center;
 }
 
 .search input {
-  width: calc(100% - 15px);
-  height: 40px;
+  width: 90%;
+  height: 28px;
   font-size: 24px;
   text-align: center;
-  border-radius: 15px
+  border-radius: 15px;
+  border: 3px solid black;
 }
 
 /* end */
@@ -31,12 +34,13 @@
   height: 45vh;
   overflow: auto;
   white-space: nowrap;
-  border: 5px solid black;
+  border: 4px solid black;
+  background-color: #345976;
 }
 
 .map {
   flex-grow: 1;
-  height: 55vh;
+  height: 45vh;
   top: 0;
   position: sticky;
   overflow: scroll;
