--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,11 @@
 
 .cards-container {
   z-index: 100;
-  height: 45vh;
   overflow: auto;
   white-space: nowrap;
-  border: 4px solid black;
+  box-shadow: 100px 100px 100px 100px #345976;
   background-color: #345976;
+  padding-bottom: 50px;
 }
 
 .map {
