--- a/src/components/card.css
+++ b/src/components/card.css
@@ -6,6 +6,7 @@
   margin: 10px;
   cursor: pointer;
   display: inline-block;
+  box-shadow: 20px 20px 20px rgba(0,0,0,0.25), 20px 20px 20px rgba(0,0,0,0.22);
 }
 
 /* cards container is in app.css */
