--- a/src/components/marker.css
+++ b/src/components/marker.css
@@ -6,10 +6,10 @@
   width: 36px;
   text-align: center;
   font-size: 10px;
+  background-size: cover;
 }
 
 .marker.selected {
-  background-color: lightyellow;
   border-color: black;
   font-weight: bold;
 }
