--- a/src/components/marker.css
+++ b/src/components/marker.css
@@ -4,12 +4,14 @@
   padding: 5px;
   background-color: white;
   width: 36px;
+  height: 50px;
   text-align: center;
   font-size: 10px;
   background-size: cover;
 }
 
 .marker.selected {
-  border-color: black;
   font-weight: bold;
+  width: 54px;
+  height: 75px;
 }
