--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@
   text-align: center;
   box-shadow: 2px 2px 2px 2px #345976;
   z-index: 500;
+  border: none;
+  margin-bottom: -3px;
 }
 
 .search input {
